chi squared problems

--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -739,6 +739,35 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:20.1}{}
 \begin{solution}{{20.1}}
+\end{solution}
+\protect \hypertarget {soln:20.2}{}
+\begin{solution}{{20.2}}
+  Проекцией вектора $(6, 3, 7, 8, 9, 10, 11)$; $a=6$, $b=5$, $c= 9$;
+\end{solution}
+\protect \hypertarget {soln:20.3}{}
+\begin{solution}{{20.3}}
+\end{solution}
+\protect \hypertarget {soln:20.4}{}
+\begin{solution}{{20.4}}
+\end{solution}
+\protect \hypertarget {soln:20.5}{}
+\begin{solution}{{20.5}}
+  $Q= Z_1^2$, зная функцию плотности $Z_1$, $f(z_1) = \frac{1}{\sqrt{2\pi}}\exp(-z_1^2/2)$, находим функцию плотности $Q$;
+\end{solution}
+\protect \hypertarget {soln:20.6}{}
+\begin{solution}{{20.6}}
+\end{solution}
+\protect \hypertarget {soln:20.7}{}
+\begin{solution}{{20.7}}
+\end{solution}
+\protect \hypertarget {soln:20.8}{}
+\begin{solution}{{20.8}}
+  $\hat Z = \langle Z, z\rangle \cdot v$;
+$\hat Z_i = \langle Z, z\rangle \cdot v_i$;
+$\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z, z\rangle)= v_i v_j$;
+\end{solution}
+\protect \hypertarget {soln:21.1}{}
+\begin{solution}{{21.1}}
   Метод максимального правдоподобия:
   \[
     C_n^{Y_{\text{к}}}C_{n-Y_{\text{к}}}^{Y_{\text{щ}}}a^{Y_{\text{к}}}(2a)^{Y_{\text{щ}}}(1-3a)^{Y_{\text{б}}} \to \max_a
@@ -753,8 +782,8 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 С точки зрения Пса Шарика, неизвестными являются две вероятности, $a$ и $b$. Он решает задачу максимизации по двум переменным. В результате получается вполне себе интуитивная оценка $\hat a_{\text{ПШ}} = Y_{\text{к}}/n$.
 
 \end{solution}
-\protect \hypertarget {soln:20.2}{}
-\begin{solution}{{20.2}}
+\protect \hypertarget {soln:21.2}{}
+\begin{solution}{{21.2}}
 Метод правдоподобия: $\max_n \P(S=80)$. Замечаем, что $S \sim Bin\left(100, p=\frac{100}{n}\right)$. Отсюда, $\hat n_{ML} = 125$.
 
 Метод моментов. Рассмотрим $Y_1$, $Y_2$, \ldots, $Y_n$. Величина $Y_i$ равна 1 если при втором отлове $i$-ый заяц оказался с бантом и 0 иначе.
@@ -768,24 +797,6 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \hat n_{MM} = \frac{100}{\bar Y} = \frac{100^2}{S}
 \]
 \end{solution}
-\protect \hypertarget {soln:20.3}{}
-\begin{solution}{{20.3}}
-\end{solution}
-\protect \hypertarget {soln:20.4}{}
-\begin{solution}{{20.4}}
-\end{solution}
-\protect \hypertarget {soln:20.5}{}
-\begin{solution}{{20.5}}
-\end{solution}
-\protect \hypertarget {soln:21.1}{}
-\begin{solution}{{21.1}}
-  $\hat{\theta}_{ML}=0.25$, $\hat{\theta}_{MM}=0.2$
-  $\hat{\theta}_{MM}=\frac{2{,}4-\bar{X}}{7}$
-\end{solution}
-\protect \hypertarget {soln:21.2}{}
-\begin{solution}{{21.2}}
-$\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
-\end{solution}
 \protect \hypertarget {soln:21.3}{}
 \begin{solution}{{21.3}}
 \end{solution}
@@ -795,68 +806,86 @@ $\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
 \protect \hypertarget {soln:21.5}{}
 \begin{solution}{{21.5}}
 \end{solution}
-\protect \hypertarget {soln:21.6}{}
-\begin{solution}{{21.6}}
-$\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
-\end{solution}
-\protect \hypertarget {soln:21.7}{}
-\begin{solution}{{21.7}}
-\end{solution}
-\protect \hypertarget {soln:21.8}{}
-\begin{solution}{{21.8}}
-\end{solution}
-\protect \hypertarget {soln:21.9}{}
-\begin{solution}{{21.9}}
-\end{solution}
-\protect \hypertarget {soln:21.10}{}
-\begin{solution}{{21.10}}
-\end{solution}
-\protect \hypertarget {soln:21.11}{}
-\begin{solution}{{21.11}}
-\end{solution}
-\protect \hypertarget {soln:21.12}{}
-\begin{solution}{{21.12}}
-\end{solution}
-\protect \hypertarget {soln:21.13}{}
-\begin{solution}{{21.13}}
-\end{solution}
-\protect \hypertarget {soln:21.14}{}
-\begin{solution}{{21.14}}
-\end{solution}
-\protect \hypertarget {soln:21.15}{}
-\begin{solution}{{21.15}}
-\end{solution}
-\protect \hypertarget {soln:21.16}{}
-\begin{solution}{{21.16}}
-\end{solution}
-\protect \hypertarget {soln:21.17}{}
-\begin{solution}{{21.17}}
-\end{solution}
-\protect \hypertarget {soln:21.18}{}
-\begin{solution}{{21.18}}
-\end{solution}
-\protect \hypertarget {soln:21.19}{}
-\begin{solution}{{21.19}}
-\end{solution}
-\protect \hypertarget {soln:21.20}{}
-\begin{solution}{{21.20}}
-\end{solution}
-\protect \hypertarget {soln:21.21}{}
-\begin{solution}{{21.21}}
-\end{solution}
-\protect \hypertarget {soln:21.22}{}
-\begin{solution}{{21.22}}
-\end{solution}
-\protect \hypertarget {soln:21.23}{}
-\begin{solution}{{21.23}}
-  $\plim_{n\to\infty} \hat\alpha_{ML}(n) = 0$, не является состоятельной
-\end{solution}
-\protect \hypertarget {soln:21.24}{}
-\begin{solution}{{21.24}}
-
-\end{solution}
 \protect \hypertarget {soln:22.1}{}
 \begin{solution}{{22.1}}
+  $\hat{\theta}_{ML}=0.25$, $\hat{\theta}_{MM}=0.2$
+  $\hat{\theta}_{MM}=\frac{2{,}4-\bar{X}}{7}$
+\end{solution}
+\protect \hypertarget {soln:22.2}{}
+\begin{solution}{{22.2}}
+$\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
+\end{solution}
+\protect \hypertarget {soln:22.3}{}
+\begin{solution}{{22.3}}
+\end{solution}
+\protect \hypertarget {soln:22.4}{}
+\begin{solution}{{22.4}}
+\end{solution}
+\protect \hypertarget {soln:22.5}{}
+\begin{solution}{{22.5}}
+\end{solution}
+\protect \hypertarget {soln:22.6}{}
+\begin{solution}{{22.6}}
+$\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
+\end{solution}
+\protect \hypertarget {soln:22.7}{}
+\begin{solution}{{22.7}}
+\end{solution}
+\protect \hypertarget {soln:22.8}{}
+\begin{solution}{{22.8}}
+\end{solution}
+\protect \hypertarget {soln:22.9}{}
+\begin{solution}{{22.9}}
+\end{solution}
+\protect \hypertarget {soln:22.10}{}
+\begin{solution}{{22.10}}
+\end{solution}
+\protect \hypertarget {soln:22.11}{}
+\begin{solution}{{22.11}}
+\end{solution}
+\protect \hypertarget {soln:22.12}{}
+\begin{solution}{{22.12}}
+\end{solution}
+\protect \hypertarget {soln:22.13}{}
+\begin{solution}{{22.13}}
+\end{solution}
+\protect \hypertarget {soln:22.14}{}
+\begin{solution}{{22.14}}
+\end{solution}
+\protect \hypertarget {soln:22.15}{}
+\begin{solution}{{22.15}}
+\end{solution}
+\protect \hypertarget {soln:22.16}{}
+\begin{solution}{{22.16}}
+\end{solution}
+\protect \hypertarget {soln:22.17}{}
+\begin{solution}{{22.17}}
+\end{solution}
+\protect \hypertarget {soln:22.18}{}
+\begin{solution}{{22.18}}
+\end{solution}
+\protect \hypertarget {soln:22.19}{}
+\begin{solution}{{22.19}}
+\end{solution}
+\protect \hypertarget {soln:22.20}{}
+\begin{solution}{{22.20}}
+\end{solution}
+\protect \hypertarget {soln:22.21}{}
+\begin{solution}{{22.21}}
+\end{solution}
+\protect \hypertarget {soln:22.22}{}
+\begin{solution}{{22.22}}
+\end{solution}
+\protect \hypertarget {soln:22.23}{}
+\begin{solution}{{22.23}}
+  $\plim_{n\to\infty} \hat\alpha_{ML}(n) = 0$, не является состоятельной
+\end{solution}
+\protect \hypertarget {soln:22.24}{}
+\begin{solution}{{22.24}}
+
+\end{solution}
+\protect \hypertarget {soln:23.1}{}
+\begin{solution}{{23.1}}
     \begin{enumerate}
       \item $c=1/n$, да
       \item $c=1/(n+\sigma^2/\mu^2)$, нет, так как $\mu$ и $\sigma$ неизвестны
@@ -864,8 +893,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
     \end{enumerate}
   
 \end{solution}
-\protect \hypertarget {soln:22.2}{}
-\begin{solution}{{22.2}}
+\protect \hypertarget {soln:23.2}{}
+\begin{solution}{{23.2}}
     \begin{enumerate}
     \item несмещённая, состоятельная, линейная, неэффективная
     \item несмещённая, состоятельная, линейная, неэффективная
@@ -880,8 +909,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
     \end{enumerate}
   
 \end{solution}
-\protect \hypertarget {soln:22.3}{}
-\begin{solution}{{22.3}}
+\protect \hypertarget {soln:23.3}{}
+\begin{solution}{{23.3}}
 \begin{enumerate}
 \item $\hat\theta_{ML} = \max\{ Y_1, Y_2, \ldots, Y_n\}$.
 \item Все $Y_i$ меньше $\theta$, значит и $\hat\theta$ всегда меньше $\theta$, значит смещённая.
@@ -890,163 +919,139 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \item $\hat\theta_{unbiased} = \frac{5n+1}{5n}\hat\theta$.
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:22.4}{}
-\begin{solution}{{22.4}}
+\protect \hypertarget {soln:23.4}{}
+\begin{solution}{{23.4}}
 \begin{enumerate}
   \item $\hat p$ несмещённая
   \item $\sigma^2 = n p(1-p)$.
   \item $\E(\hat\sigma^2) = (n-1)p(1-p)$, смещённая, $\hat\sigma^2_{unbiased} = \frac{n}{n-1} \hat\sigma^2$.
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:22.5}{}
-\begin{solution}{{22.5}}
-
-\end{solution}
-\protect \hypertarget {soln:22.6}{}
-\begin{solution}{{22.6}}
-
-\end{solution}
-\protect \hypertarget {soln:22.7}{}
-\begin{solution}{{22.7}}
-
-\end{solution}
-\protect \hypertarget {soln:22.8}{}
-\begin{solution}{{22.8}}
-
-\end{solution}
-\protect \hypertarget {soln:22.9}{}
-\begin{solution}{{22.9}}
-
-\end{solution}
-\protect \hypertarget {soln:22.10}{}
-\begin{solution}{{22.10}}
-
-\end{solution}
-\protect \hypertarget {soln:22.11}{}
-\begin{solution}{{22.11}}
-
-\end{solution}
-\protect \hypertarget {soln:22.12}{}
-\begin{solution}{{22.12}}
-  Закон распределения $X$ также экспоненциальный, но с другим $\lambda$. Честно находим $\E(X)=\theta/20$, отсюда
-  $\hat\theta_{unbiased} = 20X$.
-\end{solution}
-\protect \hypertarget {soln:22.13}{}
-\begin{solution}{{22.13}}
-
-\end{solution}
-\protect \hypertarget {soln:22.14}{}
-\begin{solution}{{22.14}}
-
-\end{solution}
-\protect \hypertarget {soln:22.15}{}
-\begin{solution}{{22.15}}
-
-\end{solution}
-\protect \hypertarget {soln:23.1}{}
-\begin{solution}{{23.1}}
-  $\frac{1}{1.8} - \frac{1}{2.2}$, $[0;10X]$.
-\end{solution}
-\protect \hypertarget {soln:23.2}{}
-\begin{solution}{{23.2}}
-\end{solution}
-\protect \hypertarget {soln:23.3}{}
-\begin{solution}{{23.3}}
-\end{solution}
-\protect \hypertarget {soln:23.4}{}
-\begin{solution}{{23.4}}
-\end{solution}
 \protect \hypertarget {soln:23.5}{}
 \begin{solution}{{23.5}}
+
 \end{solution}
 \protect \hypertarget {soln:23.6}{}
 \begin{solution}{{23.6}}
-Важна при обоих доверительных интервалах. Без предпосылки о нормальности интервал для дисперсии по данным формулам нельзя построить даже при больших $n$. При больших $n$ можно отказаться от предпосылки о нормальности при построении интервала для $\mu$.
+
 \end{solution}
 \protect \hypertarget {soln:23.7}{}
 \begin{solution}{{23.7}}
+
+\end{solution}
+\protect \hypertarget {soln:23.8}{}
+\begin{solution}{{23.8}}
+
+\end{solution}
+\protect \hypertarget {soln:23.9}{}
+\begin{solution}{{23.9}}
+
+\end{solution}
+\protect \hypertarget {soln:23.10}{}
+\begin{solution}{{23.10}}
+
+\end{solution}
+\protect \hypertarget {soln:23.11}{}
+\begin{solution}{{23.11}}
+
+\end{solution}
+\protect \hypertarget {soln:23.12}{}
+\begin{solution}{{23.12}}
+  Закон распределения $X$ также экспоненциальный, но с другим $\lambda$. Честно находим $\E(X)=\theta/20$, отсюда
+  $\hat\theta_{unbiased} = 20X$.
+\end{solution}
+\protect \hypertarget {soln:23.13}{}
+\begin{solution}{{23.13}}
+
+\end{solution}
+\protect \hypertarget {soln:23.14}{}
+\begin{solution}{{23.14}}
+
+\end{solution}
+\protect \hypertarget {soln:23.15}{}
+\begin{solution}{{23.15}}
+
 \end{solution}
 \protect \hypertarget {soln:24.1}{}
 \begin{solution}{{24.1}}
-к 1/2
+  $\frac{1}{1.8} - \frac{1}{2.2}$, $[0;10X]$.
 \end{solution}
 \protect \hypertarget {soln:24.2}{}
 \begin{solution}{{24.2}}
-  равномерно, $\alpha=0.05$; нет, он резко увеличивает ошибку второго рода
 \end{solution}
 \protect \hypertarget {soln:24.3}{}
 \begin{solution}{{24.3}}
-  $\alpha = 1/8$, $\beta = 9/32$
 \end{solution}
 \protect \hypertarget {soln:24.4}{}
 \begin{solution}{{24.4}}
-  $\alpha = \P(\cN(0;1) > -0.35) \approx 0.64$, $\beta = \P(\cN(0;1) \leq -1.76) \approx 0.04$.
 \end{solution}
 \protect \hypertarget {soln:24.5}{}
 \begin{solution}{{24.5}}
 \end{solution}
 \protect \hypertarget {soln:24.6}{}
 \begin{solution}{{24.6}}
+Важна при обоих доверительных интервалах. Без предпосылки о нормальности интервал для дисперсии по данным формулам нельзя построить даже при больших $n$. При больших $n$ можно отказаться от предпосылки о нормальности при построении интервала для $\mu$.
 \end{solution}
 \protect \hypertarget {soln:24.7}{}
 \begin{solution}{{24.7}}
+\end{solution}
+\protect \hypertarget {soln:25.1}{}
+\begin{solution}{{25.1}}
+к 1/2
+\end{solution}
+\protect \hypertarget {soln:25.2}{}
+\begin{solution}{{25.2}}
+  равномерно, $\alpha=0.05$; нет, он резко увеличивает ошибку второго рода
+\end{solution}
+\protect \hypertarget {soln:25.3}{}
+\begin{solution}{{25.3}}
+  $\alpha = 1/8$, $\beta = 9/32$
+\end{solution}
+\protect \hypertarget {soln:25.4}{}
+\begin{solution}{{25.4}}
+  $\alpha = \P(\cN(0;1) > -0.35) \approx 0.64$, $\beta = \P(\cN(0;1) \leq -1.76) \approx 0.04$.
+\end{solution}
+\protect \hypertarget {soln:25.5}{}
+\begin{solution}{{25.5}}
+\end{solution}
+\protect \hypertarget {soln:25.6}{}
+\begin{solution}{{25.6}}
+\end{solution}
+\protect \hypertarget {soln:25.7}{}
+\begin{solution}{{25.7}}
 
 \end{solution}
-\protect \hypertarget {soln:24.8}{}
-\begin{solution}{{24.8}}
+\protect \hypertarget {soln:25.8}{}
+\begin{solution}{{25.8}}
 Критерий Неймана-Пирсона сводится к сравнению $\bar X$ с порогом. При верной $H_0$ величина $\bar X$ распределена $\cN(0; \frac{4}{n})$.
 Отсюда искомый критерий имеет вид:
 Если $\bar X  \geqslant 0.825$, то гипотеза ${H_0}$ отвергается в пользу гипотезы ${H_a}$.
 \end{solution}
-\protect \hypertarget {soln:24.9}{}
-\begin{solution}{{24.9}}
+\protect \hypertarget {soln:25.9}{}
+\begin{solution}{{25.9}}
   Упрощая неравенство из леммы Неймана-Пирсона, получаем критерий: если $X_1\cdot X_2 >t$, то $H_0$ отвергается. Величину $t$ находим из уравнения
 \[
 \int_0^t (1 - t/x) \, dx = 0.05
 \]
 \end{solution}
-\protect \hypertarget {soln:24.10}{}
-\begin{solution}{{24.10}}
+\protect \hypertarget {soln:25.10}{}
+\begin{solution}{{25.10}}
 
 \end{solution}
-\protect \hypertarget {soln:24.11}{}
-\begin{solution}{{24.11}}
+\protect \hypertarget {soln:25.11}{}
+\begin{solution}{{25.11}}
 \end{solution}
-\protect \hypertarget {soln:25.1}{}
-\begin{solution}{{25.1}}
+\protect \hypertarget {soln:26.1}{}
+\begin{solution}{{26.1}}
 При $p_N$ заданном в $H_0$ критерий Пирсона имеет хи-квадрат распределение с двумя степенями свободы.
 При оцениваемом $p_N$ критерий Пирсона имеет хи-квадрат распределение с одной степенью свободы.
 
 \url{https://ru.wikipedia.org/wiki/Закон_Харди_—_Вайнберга}
   
 \end{solution}
-\protect \hypertarget {soln:26.1}{}
-\begin{solution}{{26.1}}
-$\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
-\end{solution}
-\protect \hypertarget {soln:26.2}{}
-\begin{solution}{{26.2}}
-
-\end{solution}
-\protect \hypertarget {soln:26.3}{}
-\begin{solution}{{26.3}}
-
-\end{solution}
-\protect \hypertarget {soln:26.4}{}
-\begin{solution}{{26.4}}
-
-\end{solution}
-\protect \hypertarget {soln:26.5}{}
-\begin{solution}{{26.5}}
-
-\end{solution}
-\protect \hypertarget {soln:26.6}{}
-\begin{solution}{{26.6}}
-
-\end{solution}
 \protect \hypertarget {soln:27.1}{}
 \begin{solution}{{27.1}}
-Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
+$\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
 \protect \hypertarget {soln:27.2}{}
 \begin{solution}{{27.2}}
@@ -1054,26 +1059,27 @@ $\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
 \protect \hypertarget {soln:27.3}{}
 \begin{solution}{{27.3}}
+
 \end{solution}
 \protect \hypertarget {soln:27.4}{}
 \begin{solution}{{27.4}}
+
 \end{solution}
 \protect \hypertarget {soln:27.5}{}
 \begin{solution}{{27.5}}
-$(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
+
 \end{solution}
 \protect \hypertarget {soln:27.6}{}
 \begin{solution}{{27.6}}
+
 \end{solution}
 \protect \hypertarget {soln:28.1}{}
 \begin{solution}{{28.1}}
-$C_{20}^2\cdot 18$.
+Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
 \end{solution}
 \protect \hypertarget {soln:28.2}{}
 \begin{solution}{{28.2}}
-  $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
-  $1+x+x^2+x^3+\ldots = 1/(1-x)$
-  $(1+x)^4$
+
 \end{solution}
 \protect \hypertarget {soln:28.3}{}
 \begin{solution}{{28.3}}
@@ -1083,14 +1089,37 @@ $C_{20}^2\cdot 18$.
 \end{solution}
 \protect \hypertarget {soln:28.5}{}
 \begin{solution}{{28.5}}
-  0 с вероятностью 1/4 и 1 с вероятностью 3/4
+$(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
 \end{solution}
 \protect \hypertarget {soln:28.6}{}
 \begin{solution}{{28.6}}
+\end{solution}
+\protect \hypertarget {soln:29.1}{}
+\begin{solution}{{29.1}}
+$C_{20}^2\cdot 18$.
+\end{solution}
+\protect \hypertarget {soln:29.2}{}
+\begin{solution}{{29.2}}
+  $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
+  $1+x+x^2+x^3+\ldots = 1/(1-x)$
+  $(1+x)^4$
+\end{solution}
+\protect \hypertarget {soln:29.3}{}
+\begin{solution}{{29.3}}
+\end{solution}
+\protect \hypertarget {soln:29.4}{}
+\begin{solution}{{29.4}}
+\end{solution}
+\protect \hypertarget {soln:29.5}{}
+\begin{solution}{{29.5}}
+  0 с вероятностью 1/4 и 1 с вероятностью 3/4
+\end{solution}
+\protect \hypertarget {soln:29.6}{}
+\begin{solution}{{29.6}}
   да, сможет!
 \end{solution}
-\protect \hypertarget {soln:28.7}{}
-\begin{solution}{{28.7}}
+\protect \hypertarget {soln:29.7}{}
+\begin{solution}{{29.7}}
 $F_n = F_{n-1} + F_{n-2}$.
 Запишем разложения для $g(x)$, $xg(x)$ и $x^2 g(x)$ друг под другом. Вычитаем. Получаем, что $g(x) = x/(1-x-x^2)$.
 
@@ -1102,36 +1131,36 @@ g(x) = \frac{1}{\sqrt{5}}\left( \frac{a}{x+a} - \frac{b}{x+b}  \right),
 \]
 где $a=(1-\sqrt{5})/2$, $b=(1+\sqrt{5})/2$.
 \end{solution}
-\protect \hypertarget {soln:28.8}{}
-\begin{solution}{{28.8}}
+\protect \hypertarget {soln:29.8}{}
+\begin{solution}{{29.8}}
 Замечаем, что $h_2(t)=h_1(t)\cdot h_1(t)$. После первого шага:
 \[
 h_1(t) = 0.7t + 0.3th^2_1(t)
 \]
 \end{solution}
-\protect \hypertarget {soln:28.9}{}
-\begin{solution}{{28.9}}
+\protect \hypertarget {soln:29.9}{}
+\begin{solution}{{29.9}}
 
-\end{solution}
-\protect \hypertarget {soln:29.1}{}
-\begin{solution}{{29.1}}
-\end{solution}
-\protect \hypertarget {soln:29.2}{}
-\begin{solution}{{29.2}}
 \end{solution}
 \protect \hypertarget {soln:30.1}{}
 \begin{solution}{{30.1}}
-  Если величина $X$ равновероятно принимает $k$ значений, то спутанность равна $k$. У равномерной на $[0;a]$ спутанность равна $a$.
 \end{solution}
 \protect \hypertarget {soln:30.2}{}
 \begin{solution}{{30.2}}
 \end{solution}
-\protect \hypertarget {soln:30.3}{}
-\begin{solution}{{30.3}}
+\protect \hypertarget {soln:31.1}{}
+\begin{solution}{{31.1}}
+  Если величина $X$ равновероятно принимает $k$ значений, то спутанность равна $k$. У равномерной на $[0;a]$ спутанность равна $a$.
 \end{solution}
-\protect \hypertarget {soln:30.4}{}
-\begin{solution}{{30.4}}
+\protect \hypertarget {soln:31.2}{}
+\begin{solution}{{31.2}}
 \end{solution}
-\protect \hypertarget {soln:30.5}{}
-\begin{solution}{{30.5}}
+\protect \hypertarget {soln:31.3}{}
+\begin{solution}{{31.3}}
+\end{solution}
+\protect \hypertarget {soln:31.4}{}
+\begin{solution}{{31.4}}
+\end{solution}
+\protect \hypertarget {soln:31.5}{}
+\begin{solution}{{31.5}}
 \end{solution}
