--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -20,6 +20,8 @@ style=alphabetic]{biblatex}
 
 \def \RR{\mathbb{R}}
 \def \cN{\mathcal{N}}
+\newcommand{\Lin}{\mathcal{L}in}
+\newcommand{\Linp}{\Lin^{\perp}}
 
 \title{Заметки к семинарам по вероятностям}
 \author{Винни-Пух}
@@ -2824,6 +2826,141 @@ Y
 \begin{sol}
 \end{sol}
 \end{problem}
+
+\section{Проецируй!}
+
+Если:
+\begin{enumerate}
+  \item вектор $Z$ имеет многомерное нормальное стандартное распределение, $Z\sim \cN(0; I)$;
+  \item $\hat Z$ — это проекция вектора $Z$ на некоторое $d$-мерное подпространство $V$;
+  \item $Q$ — это квадрат длины проекции, $Q=||\hat Z||^2$;
+\end{enumerate}
+то закон распределения величины $Q$ называется  хи-квадрат распределением с $d$ степенями свободы и обозначается $Q \sim \chi^2_d$.
+
+\begin{problem}
+  Вектор $Z$ имеет многомерное нормальное распределение, $Z_i \sim \cN(0;1)$, и все $Z_i$ независимы. 
+  Для каждого случая найдите проекцию $\hat Z$ вектора $Z$ на подпространство $V$; 
+  найдите квадрат длины проекции, $Q$; укажите закон распределения величины $Q$: 
+  \begin{enumerate}
+    \item $V = \Lin(e)$, где $e=(1, 1, 1, 1, \ldots, 1)$;
+    \item $V = \Lin(e)$, где $e=(1, 2, 3, 4, \ldots, n)$;
+    \item $V = \Lin(e_1, e_2)$, где $e=(1, 0, 0, 0, \ldots, 0)$, $e_2 = (0, 1, 1, 1, \ldots, 1)$;
+    \item $V = \Linp(e)$, где $e=(1, 1, 1, 1, \ldots, 1)$;
+    \item $V = \Lin(e_5, e_7, e_9)$, вектор $e_i$ содержит $1$ на $i$-ом месте и $0$ на остальных;
+  \end{enumerate}
+      
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+  Найдите минимум функции $f(a, b, c) = (6-a)^2 + (3 - b)^2 + (7 - b)^2 + (8 - c)^2 + (9-c)^2 + (10- c)^2 + 11^2$;
+
+  Проекцией какого вектора на какое пространство является вектор $\hat Z = (a, b, b, c, c, c, 0)$?
+\begin{sol}
+  Проекцией вектора $(6, 3, 7, 8, 9, 10, 11)$; $a=6$, $b=5$, $c= 9$;
+\end{sol}
+\end{problem}
+
+
+
+
+\begin{problem}
+  Вектор $Z$ из $n$ случайных величин имеет многомерное нормальное распределение, $Z_i \sim \cN(0;1)$, и все $Z_i$ независимы. 
+  Определите, какое распределение имеет величина $Q$, и найдите вероятность:
+  \begin{enumerate}
+    \item $Q = Z_1^2$, $\P(Q > 6.6)$;
+    \item $Q=n\bar Z^2$, $\P(Q < 3.8)$;
+    \item $Q=\sum (Z_i - \bar Z)^2$;
+    \item $Q = Z_5^2 + Z_6^2 + Z_{32}^2$, $\P(Q < 0.58)$;
+    \item $Q = Z_2^2 + (Z_7 + Z_{11})^2/2$, $\P(Q>6)$;
+    \item $Q = (Z_7 + Z_{11})^2/2 + (Z_3 + Z_9 + Z_{12})^2/3$, $\P(Q < 0.21)$;
+  \end{enumerate}
+  Для каждого случая укажите подпространство, для которого величина $Q$ будет квадратом длины проекции исходного вектора $Z$;
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+Вектор $Z$ из $n$ случайных величин имеет многомерное нормальное распределение, $Z_i \sim \cN(0;1)$, и все $Z_i$ независимы.
+\begin{enumerate}
+  \item Какое распределение имеет величина $Q = Z_1^2 + Z_2^2 + \ldots + Z_d^2$? 
+  \item Чему равно $\E(Q)$? 
+  \item Чему равна дисперсия $\Var(Q)$?
+  \item Величина $Q_a$ имеет хи-квадрат распределение с $a$ степенями свободы, а величина $Q_b$ — с $b$ степенями свободы. 
+    Величины $Q_a$ и $Q_b$ независимы.
+    Какое распределение имеет величина $S=Q_a + Q_b$?
+\end{enumerate}
+
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+
+
+\begin{problem}
+  Найдите функцию плотности $\chi$-квадрат распределения с одной степенью свободы;
+\begin{sol}
+  $Q= Z_1^2$, зная функцию плотности $Z_1$, $f(z_1) = \frac{1}{\sqrt{2\pi}}\exp(-z_1^2/2)$, находим функцию плотности $Q$;
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+Пусть величины $X$ и $Y$ независимы и имеют хи-квадрат распределение с одной степенью свободы. Введём величины $R=X/(X+Y)$ и $S=X+Y$.
+\begin{enumerate}
+  \item Выпишите совместную функцию плотности $f(x, y)$;
+  \item Найдите совместную функцию плотности $f(r, s)$;
+  \item Верно ли, что $R$ и $S$ независимы?
+  \item С точностью до сомножителя найдите функцию плотности $S$;
+  \item Какой закон распределения имеет величина $S$?
+\end{enumerate}
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+Пусть величины $X$ и $Y$ независимы и имеют хи-квадрат распределение с одной и двумя степенями свободы. Введём величины $R=X/(X+Y)$ и $S=X+Y$.
+\begin{enumerate}
+  \item Выпишите совместную функцию плотности $f(x, y)$;
+  \item Найдите совместную функцию плотности $f(r, s)$;
+  \item Верно ли, что $R$ и $S$ независимы?
+  \item С точностью до сомножителя найдите функцию плотности $S$;
+  \item Какой закон распределения имеет величина $S$?
+  \item Предположите вид функции плотности хи-квадрат распределения с $d$ степенями свободы и докажите догадку по индукции;
+\end{enumerate}
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+
+
+
+
+\begin{problem}
+Вектор $Z$ из $n$ случайных величин имеет многомерное нормальное распределение, $Z_i \sim \cN(0;1)$, и все $Z_i$ независимы. Вектор $v$ имеет единичную длину.
+\begin{enumerate}
+  \item Найдите вектор $\hat Z$, проекцию вектора $Z$ на подпространство $\Lin(v)$; Чему равно $\hat Z_i$?
+  \item Найдите дисперсию $\Var(\langle Z, v\rangle)$;
+  \item Найдите ковариацию $\Cov(\hat Z_i, \hat Z_j)$;
+  \item Как выглядит ковариационная матрица вектора $\hat Z$?
+\end{enumerate}
+
+\begin{sol}
+  $\hat Z = \langle Z, z\rangle \cdot v$; 
+$\hat Z_i = \langle Z, z\rangle \cdot v_i$;
+$\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z, z\rangle)= v_i v_j$;
+\end{sol}
+\end{problem}
+
+
 
 
 
