--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -535,6 +535,24 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \begin{solution}{{13.3}}
   $\P(X<20) \geq 0.5$
 \end{solution}
+\protect \hypertarget {soln:13.4}{}
+\begin{solution}{{13.4}}
+\end{solution}
+\protect \hypertarget {soln:13.5}{}
+\begin{solution}{{13.5}}
+  $\Var(X)=0$, так как $X$ почти наверное константа;
+\end{solution}
+\protect \hypertarget {soln:13.6}{}
+\begin{solution}{{13.6}}
+\end{solution}
+\protect \hypertarget {soln:13.7}{}
+\begin{solution}{{13.7}}
+    Потратили одинаково, молока купил больше Кот Матроскин.
+\end{solution}
+\protect \hypertarget {soln:13.8}{}
+\begin{solution}{{13.8}}
+    У Кота Матроскина.
+\end{solution}
 \protect \hypertarget {soln:14.1}{}
 \begin{solution}{{14.1}}
 \end{solution}
@@ -739,6 +757,16 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:20.1}{}
 \begin{solution}{{20.1}}
+Здесь потребуется формула для $S=1^2+2^2 + \ldots + n^2$. Из рисунка
+
+\begin{minipage}{0.5\textwidth}
+\includegraphics[width=\textwidth]{figure/triangle-proof.png}
+\end{minipage}
+
+видно, что
+\[
+  3S = (2n+1) \cdot (1 + 2 + \ldots + n) = (2n+1)n\frac{n+1}{2}.
+\]
 \end{solution}
 \protect \hypertarget {soln:20.2}{}
 \begin{solution}{{20.2}}
@@ -966,7 +994,7 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \end{solution}
 \protect \hypertarget {soln:23.14}{}
 \begin{solution}{{23.14}}
-
+Обе оценки несмещённые, состоятельные. Более эффективна $\hat{\beta}_{2}=\frac{\sum{x_{i}Y_{i}}}{\sum x_{i}^{2}}$.
 \end{solution}
 \protect \hypertarget {soln:23.15}{}
 \begin{solution}{{23.15}}
