--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1896,6 +1896,8 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \section{Долой неравенство Чебышёва и Маркова}
 
 
+% сюда Кантелли? Йенсена и прочие неравенства?
+
 \begin{problem}
  С помощью неравенства Чебышева оцените вероятности
 \begin{enumerate}
@@ -1906,33 +1908,78 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 $X\sim \cN(\mu;\sigma^{2})$, $Y\sim U[0;20]$ и $Z\sim Exp(1)$.
 \end{enumerate}
 
-
-
 \begin{sol}
   b $4/20\geq 1-100/12$
 
   c $1-e^{-3}\geq 0.75$
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Известно, что $\E(X)=100$, какой должна быть дисперсия величины $X$, чтобы вне зависимости от закона распределения величины $X$ можно было бы гарантировать, что $\P(X \in [90;110])\geq 0.95$? А как решить аналогичный вопрос для $\P(X \in [90;100])\geq 0.95$?
-
-
 
 \begin{sol}
   $\Var(X)\leq 5$
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Известно, что $X$ —  неотрицательная случайная величина с $\E(X)=10$. В каких пределах может лежать вероятность $\P(X<20)$?
-
-
-% сюда Кантелли? Йенсена и прочие неравенства?
-
 \begin{sol}
   $\P(X<20) \geq 0.5$
 \end{sol}
 \end{problem}
+
+
+\begin{problem}
+Сравните:
+\begin{enumerate}
+  \item $\E(X^2)$ и $(\E(X))^2$;
+  \item $\ln (\E(X))$ и $\E(\ln X)$;
+  \item $\E(1/X)$ и $1/\E(X)$;
+\end{enumerate}
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+  Дискретная случайная величина $X$ обладает интересным свойством $\E(1/X)=1/\E(X)$. В каких пределах может лежать $\Var(X)$?
+\begin{sol}
+  $\Var(X)=0$, так как $X$ почти наверное константа;
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+  Весна, половодье. На пеньках ждут спасения зайцы. Их очень много. Количество зайев на каждом пеньке — случайная величина равновероятно принимающая значения от 1 до 19. У Деда Мазая две стратегии. Стратегия А: перевозить зайецев на безопасное место равными партиями по 10 штук. Стратегия Б: спасать за одну перевозку зайцев с одного пенька. При какой стратегии у Деда Мазая в среднем будет меньше перевозок?
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+Пёс Шарик и Кот Матроскин каждый день в течение месяца покупают молоко в розлив. Цена молока в $i$-ый день — константа $m_i$. Средняя цена молока за прошедший месяц оказалась равной 40 рублям. Пёс Шарик каждый день покупал литр молока. Кот Матроскин каждый день покупал молока на 40 рублей. Кто больше потратил денег? Кто больше молока купил? 
+  \begin{sol}
+    Потратили одинаково, молока купил больше Кот Матроскин.
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem} 
+Кот Матроскин забрасывает удочку 10 раз. 
+Вероятность поймать рыбку при одном забрасывании равна $p$. 
+Пёс Шарик забрасывает удочку случайное пуассоновское количество раз, 
+$N$, под настроение. 
+Известно, что $\E(N) = 10$. 
+У кого шансы поймать хотя бы одну рыбку выше?
+\begin{sol}
+    У Кота Матроскина.
+\end{sol}
+\end{problem}
+
 
 
 \section{Полный беспредел}
@@ -2844,14 +2891,26 @@ Y
   \begin{enumerate}
     \item $V = \Lin(e)$, где $e=(1, 1, 1, 1, \ldots, 1)$;
     \item $V = \Lin(e)$, где $e=(1, 2, 3, 4, \ldots, n)$;
-    \item $V = \Lin(e_1, e_2)$, где $e=(1, 0, 0, 0, \ldots, 0)$, $e_2 = (0, 1, 1, 1, \ldots, 1)$;
+    \item $V = \Lin(e_1, e_2)$, где $e_1=(1, 0, 0, 0, \ldots, 0)$, $e_2 = (0, 1, 1, 1, \ldots, 1)$;
     \item $V = \Linp(e)$, где $e=(1, 1, 1, 1, \ldots, 1)$;
     \item $V = \Lin(e_5, e_7, e_9)$, вектор $e_i$ содержит $1$ на $i$-ом месте и $0$ на остальных;
   \end{enumerate}
       
 \begin{sol}
+Здесь потребуется формула для $S=1^2+2^2 + \ldots + n^2$. Из рисунка
+
+\begin{minipage}{0.5\textwidth}
+\includegraphics[width=\textwidth]{figure/triangle-proof.png}
+\end{minipage}
+
+видно, что 
+\[
+  3S = (2n+1) \cdot (1 + 2 + \ldots + n) = (2n+1)n\frac{n+1}{2}.
+\]
 \end{sol}
 \end{problem}
+
+
 
 
 \begin{problem}
@@ -2868,7 +2927,7 @@ Y
 
 \begin{problem}
   Вектор $Z$ из $n$ случайных величин имеет многомерное нормальное распределение, $Z_i \sim \cN(0;1)$, и все $Z_i$ независимы. 
-  Определите, какое распределение имеет величина $Q$, и найдите вероятность:
+  Определите, какое распределение имеет величина $Q$, на какое подпространство проецировали вектор $Z$, и найдите вероятность:
   \begin{enumerate}
     \item $Q = Z_1^2$, $\P(Q > 6.6)$;
     \item $Q=n\bar Z^2$, $\P(Q < 3.8)$;
@@ -3700,21 +3759,21 @@ $\theta>0$ — неизвестный параметр. С помощью $\bar{
 \end{problem}
 
 \begin{problem}
-Величины $Y_{i}=\beta X_{i} +\epsilon_{i}$, константа $\beta$ и
-случайные величины $\epsilon_{i}$ являются ненаблюдаемыми.
-Известно, что $\E(\epsilon_{i})=0$, $\Var(\epsilon_{i})=\sigma^{2}$,
-$\epsilon_{i}$ являются независимыми. Константы $X_{i}$
-наблюдаемы, и известно, что $20<X_{i}<100$. У исследователя есть
+Величины $Y_{i}=\beta x_{i} +\varepsilon_{i}$, константа $\beta$ и
+случайные величины $\varepsilon_{i}$ являются ненаблюдаемыми.
+Известно, что $\E(\epsilon_{i})=0$, $\Var(\epsilon_{i})=1$,
+$\epsilon_{i}$ являются независимыми. Константы $x_{i}$
+наблюдаемы, и известно, что $20<x_{i}<100$. У исследователя есть
 две
-оценки для $\beta$: $\hat{\beta}_{1}=\frac{\bar{Y}}{\bar{X}}$ и
-$\hat{\beta}_{2}=\frac{\sum{X_{i}Y_{i}}}{\sum{X_{i}^{2}}}$.
+оценки для $\beta$: $\hat{\beta}_{1}=\frac{\bar{Y}}{\bar{x}}$ и
+$\hat{\beta}_{2}=\frac{\sum{x_{i}Y_{i}}}{\sum x_{i}^{2}}$.
 
 \begin{enumerate}
 \item Проверьте несмещенность, состоятельность.
-\item Определите, какая оценка является наиболее эффективной.
+\item Определите, какая оценка из двух является наиболее эффективной.
 \end{enumerate}
 \begin{sol}
-
+Обе оценки несмещённые, состоятельные. Более эффективна $\hat{\beta}_{2}=\frac{\sum{x_{i}Y_{i}}}{\sum x_{i}^{2}}$.
 \end{sol}
 \end{problem}
 
@@ -3724,7 +3783,7 @@ $\hat{\beta}_{2}=\frac{\sum{X_{i}Y_{i}}}{\sum{X_{i}^{2}}}$.
 
 Иван использует следующий механизм: предлагает респонденту тайно подбросить правильную монетку, если монетка выпадает орлом, то предлагается ответить «да», если решкой — то предлагается ответить правду. Предположим, что все респонденты действую точно так, как предлагает Иван.
 
-У Марьи кристально чистые голубые глаза, она невинна и чиста, и солгать ей просто невозможно.
+У Марьи кристально чистые голубые глаза, она юна и невинна, и солгать ей просто невозможно.
 
 Пусть $p$ — доля берущих взятки, а $\hat q_{I}$ и $\hat q_{M}$ — доля ответивших «да» на вопросы Ивана да Марьи. Марья использует оценку $\hat p_M = \hat q_M$, а Иван — $\hat p_I = 2\hat q_I - 1$.
 
