--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4471,6 +4471,9 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
 \section{Шпаргалка}
 
+\subsection{Определения}
+
+
 \begin{enumerate}
 
   \item Оценка $\hat a$ неизвестного параметра $a$ называется \textit{несмещённой}, если $\E(\hat a) = a$.
@@ -4481,9 +4484,14 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 если для любого положительного числа $\varepsilon$ оказывается, 
 что $\lim \P(|Z_n - Z|>\varepsilon) = 0$. Сходимость по вероятности записывается как $\plim Z_n = Z$.
 
+\item Среднеквадратическое отклонение оценки $\hat a$ от истинного значение параметра $a$, $MSE(\hat a)=\E((\hat a - a)^2)$. По теореме Пифагора величина $MSE$ представима в виде $MSE(\hat a) = \Var(\hat a) + (\E(\hat a) - a)^2$. Если оценка несмещённая, то $MSE = \Var(\hat a)$.
+
+\item Оценка $\hat a$ неизвестного параметра $a$ называется эффективной среди некоторого набора оценок, если оценка $\hat a$ обладает наименьшей среднеквадратичной ошибкой $MSE$ среди рассматриваемого набора оценок. Если рассматриваемые оценки являются несмещёнными, то эффективная оценка обладает наименьшей дисперсией.
+
 \end{enumerate}
 
 
+\subsection{Гипотезы}
 
 
 
@@ -4496,11 +4504,11 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
       \item Предполагаем: $X_i$ независимы и одинаково распределены (не обязательно нормально), количество наблюдений $n$ велико.
 
-      \item Проверяемая гипотеза: $H_0$: $\mu = \mu^0$ против $H_a$: $\mu \neq \mu^0$;
+      \item Проверяемая гипотеза: $H_0$: $\mu = \mu_0$ против $H_a$: $\mu \neq \mu_0$;
 
       \item Статистика: 
 	\[
-	  Z = \frac{\bar X - \mu^0}{se(\bar X)} = \frac{\bar X - \mu^0}{\sqrt{\frac{\hat \sigma^2}{n}}} 
+	  Z = \frac{\bar X - \mu_0}{se(\bar X)} = \frac{\bar X - \mu_0}{\sqrt{\frac{\hat \sigma^2}{n}}} 
 	\]
 
       \item При верной $H_0$ оказывается, что $Z \to \cN(0;1)$;
@@ -4513,11 +4521,11 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
       \item Предполагаем: $X_i$ независимы и одинаково нормально распределены $\cN(\mu; \sigma^2)$, количество наблюдений $n$ может быть мало.
 
-      \item Проверяемая гипотеза: $H_0$: $\mu = \mu^0$ против $H_a$: $\mu \neq \mu^0$;
+      \item Проверяемая гипотеза: $H_0$: $\mu = \mu_0$ против $H_a$: $\mu \neq \mu_0$;
 
       \item Статистика: 
 	\[
-	  Z = \frac{\bar X - \mu^0}{se(\bar X)} = \frac{\bar X - \mu^0}{\sqrt{\frac{\hat \sigma^2}{n}}} 
+	  Z = \frac{\bar X - \mu_0}{se(\bar X)} = \frac{\bar X - \mu_0}{\sqrt{\frac{\hat \sigma^2}{n}}} 
 	\]
 
       \item При верной $H_0$ оказывается, что $Z \sim t_{n-1}$;
@@ -4531,17 +4539,64 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
       \item Предполагаем: $X_i$ независимы и одинаково нормально распределены $\cN(\mu; \sigma^2)$, количество наблюдений $n$ может быть мало.
 
-      \item Проверяемая гипотеза: $H_0$: $\mu = \mu^0$ против $H_a$: $\mu \neq \mu^0$;
+      \item Проверяемая гипотеза: $H_0$: $\mu = \mu_0$ против $H_a$: $\mu \neq \mu_0$;
 
       \item Статистика: 
 	\[
-	  Z = \frac{\bar X - \mu^0}{\sigma_{\bar X}} = \frac{\bar X - \mu^0}{\sqrt{\frac{\sigma^2}{n}}} 
+	  Z = \frac{\bar X - \mu_0}{\sigma_{\bar X}} = \frac{\bar X - \mu_0}{\sqrt{\frac{\sigma^2}{n}}} 
 	\]
 
       \item При верной $H_0$ оказывается, что $Z \sim \cN(0;1)$;
 
 
     \end{enumerate}
+
+
+
+  \item Гипотеза о вероятности при наблюдениях с распределением Бернулли (0 или 1) 
+  \begin{enumerate}
+
+      \item Наблюдаем: $X_1$, $X_2$, \ldots, $X_n$
+
+      \item Предполагаем: $X_i$ независимы и имеют распределение Бернулли: равны 1 с вероятностью $p$ и 0 с вероятностью $1-p$. Количество наблюдений $n$ велико.
+
+      \item Проверяемая гипотеза: $H_0$: $p = p_0$ против $H_a$: $p \neq p_0$;
+
+      \item Статистика: 
+	\[
+	  Z = \frac{\hat p - p_0}{se(\hat p)} = \frac{\hat p - p_0}{\sqrt{\frac{\hat p (1- \hat p)}{n}}}	
+      \]
+      Возможен вариант этой статистики:
+
+	\[
+	  Z = \frac{\hat p - p_0}{se(\hat p)} = \frac{\hat p - p_0}{\sqrt{\frac{p_0 (1- p_0 )}{n}}}	
+      \]
+     \item При верной $H_0$ оказывается, что $Z \to \cN(0;1)$;
+
+
+  \end{enumerate}
+
+
+  \item Гипотеза о дисперсии при нормальных наблюдениях
+    \begin{enumerate}
+
+      \item Наблюдаем: $X_1$, $X_2$, \ldots, $X_n$
+
+      \item Предполагаем: $X_i$ независимы и одинаково нормально распределены $\cN(\mu; \sigma^2)$, количество наблюдений $n$ может быть мало.
+
+      \item Проверяемая гипотеза: $H_0$: $\sigma = \sigma_0$ против $H_a$: $\sigma \neq \sigma_0$;
+
+      \item Статистика: 
+	\[
+	  S = \frac{\sum (X_i - \bar X)^2}{\sigma_0^2} = \frac{(n-1)\hat\sigma^2}{\sigma_0^2}	
+      \]
+
+    \item При верной $H_0$ оказывается, что $S \sim \chi^2_{n-1}$;
+
+
+    \end{enumerate}
+
+
 
 
 \end{enumerate}
