link rule 5 to rule 1 in CI

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4497,7 +4497,7 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
 \begin{enumerate}
 
-  \item Гипотеза о математическом ожидании
+  \item Гипотеза о математическом ожидании при большом количестве наблюдений
     \begin{enumerate}
 
       \item Наблюдаем: $X_1$, $X_2$, \ldots, $X_n$;
@@ -4571,7 +4571,15 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 	\[
 	  Z = \frac{\hat p - p_0}{se(\hat p)} = \frac{\hat p - p_0}{\sqrt{\frac{p_0 (1- p_0 )}{n}}}	
       \]
+     
+
      \item При верной $H_0$ оказывается, что $Z \to \cN(0;1)$;
+
+     \item Гипотеза о вероятностях является частным случаем гипотезы о математическом ожидании при большом количестве наблюдений. Можно заметить, что $\hat p = \bar X$ и $\hat \sigma^2 = \hat p (1- \hat p) \cdot \frac{n}{n-1}$. И потому также корректен вариант статистики
+ 
+	\[
+	  Z = \frac{\bar X - \mu_0}{se(\bar X)} = \frac{\bar X - \mu_0}{\sqrt{\frac{\hat \sigma^2}{n}}} 
+	\]
 
 
   \end{enumerate}
