--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4497,7 +4497,7 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
 \subsection{Гипотезы}
 
-
+\subsubsection{Про единственную выборку}
 
 \begin{enumerate}
 
@@ -4529,10 +4529,10 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
       \item Статистика: 
 	\[
-	  Z = \frac{\bar X - \mu_0}{se(\bar X)} = \frac{\bar X - \mu_0}{\sqrt{\frac{\hat \sigma^2}{n}}} 
+	  t = \frac{\bar X - \mu_0}{se(\bar X)} = \frac{\bar X - \mu_0}{\sqrt{\frac{\hat \sigma^2}{n}}} 
 	\]
 
-      \item При верной $H_0$ оказывается, что $Z \sim t_{n-1}$;
+      \item При верной $H_0$ оказывается, что $t \sim t_{n-1}$;
     \end{enumerate}
 
 
@@ -4608,7 +4608,115 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
     \end{enumerate}
 
+\end{enumerate}
 
+
+\subsubsection{Про пару выборок}
+
+\begin{enumerate}[resume]
+  \item Гипотеза о разнице ожиданий при большом количестве наблюдений
+    \begin{enumerate}
+      \item Наблюдаем: $X_1$, $X_2$, \ldots, $X_{n_x}$, $Y_1$, $Y_2$, \ldots, $Y_{n_y}$. 
+	Возможно, что $n_x \neq n_y$. Дисперсии $\sigma^2_x$ и $\sigma^2_y$ не знаем и не уверены, что они равны.
+      \item Предполагаем: $X_i$ одинаково распределены между собой (не обязательно нормально), 
+	$Y_i$ одинаково распределены между собой, но возможно совсем не так, как $X_i$ (не обязательно нормально). 
+	Все величины независимы. Количества $n_x$ и $n_y$ велики.
+      \item Проверяемая гипотеза: $H_0$: $\mu_x - \mu_y = \delta_0$ против $H_a$: $\mu_x - \mu_y \neq \delta_0$;
+
+     \item Статистика: 
+	\[
+	  Z = \frac{\bar X - \bar Y - \delta_0}{se(\bar X - \bar Y)} = 
+	  \frac{\bar X - \bar Y - \delta_0}{\sqrt{\frac{\hat \sigma^2_x}{n_x}+\frac{\hat\sigma^2_y}{n_y}}} 
+      \]
+
+    \item При верной $H_0$ оказывается, что $Z \to \cN(0;1)$;
+\end{enumerate}
+
+  \item Гипотеза о разнице ожиданий при нормальности распределения обеих выборок и известных дисперсиях 
+    \begin{enumerate}
+      \item Наблюдаем: $X_1$, $X_2$, \ldots, $X_{n_x}$, $Y_1$, $Y_2$, \ldots, $Y_{n_y}$. 
+	Возможно, что $n_x \neq n_y$. Дисперсии $\sigma^2_x$ и $\sigma^2_y$ знаем. Возможно, что дисперсии не равны.
+      \item Предполагаем: $X_i$ одинаково распределены между собой $\cN(\mu_x, \sigma^2_x)$, 
+	$Y_i$ одинаково распределены между собой $\cN(\mu_y, \sigma^2_y)$.
+	Все величины независимы. Количества $n_x$ и $n_y$ любые.
+      \item Проверяемая гипотеза: $H_0$: $\mu_x - \mu_y = \delta_0$ против $H_a$: $\mu_x - \mu_y \neq \delta_0$;
+
+     \item Статистика: 
+	\[
+	  Z = \frac{\bar X - \bar Y - \delta_0}{\sigma_{\bar X - \bar Y}} = 
+	  \frac{\bar X - \bar Y - \delta_0}{\sqrt{\frac{\sigma^2_x}{n_x}+\frac{\sigma^2_y}{n_y}}} 
+      \]
+
+    \item При верной $H_0$ оказывается, что $Z \sim \cN(0;1)$;
+\end{enumerate}
+
+
+  \item Гипотеза о разнице ожиданий при нормальности распределения обеих выборок и неизвестных но равных дисперсиях 
+    \begin{enumerate}
+      \item Наблюдаем: $X_1$, $X_2$, \ldots, $X_{n_x}$, $Y_1$, $Y_2$, \ldots, $Y_{n_y}$. 
+	Возможно, что $n_x \neq n_y$. Дисперсии $\sigma^2_x$ и $\sigma^2_y$ равны, но неизвестны.
+      \item Предполагаем: $X_i$ одинаково распределены между собой $\cN(\mu_x, \sigma^2)$, 
+	$Y_i$ одинаково распределены между собой $\cN(\mu_y, \sigma^2)$.
+	Все величины независимы. Количества $n_x$ и $n_y$ любые.
+      \item Проверяемая гипотеза: $H_0$: $\mu_x - \mu_y = \delta_0$ против $H_a$: $\mu_x - \mu_y \neq \delta_0$;
+
+     \item Статистика: 
+	\[
+	  t = \frac{\bar X - \bar Y - \delta_0}{se(\bar X - \bar Y)} = 
+	  \frac{\bar X - \bar Y - \delta_0}{\sqrt{\frac{\hat \sigma^2}{n_x}+\frac{\hat\sigma^2}{n_y}}},
+      \]
+      где 
+      \[
+	\hat \sigma^2 = \frac{\sum (X_i - \bar X)^2 + \sum (Y_i - \bar Y)^2 }{n_x + n_y - 2}
+      \]
+
+    \item При верной $H_0$ оказывается, что $t \sim t_{n_x+n_y-2}$;
+\end{enumerate}
+
+
+  \item Гипотеза о разнице ожиданий в связанных парах 
+    \begin{enumerate}
+      \item Наблюдаем: $X_1$, $X_2$, \ldots, $X_{n}$, $Y_1$, $Y_2$, \ldots, $Y_{n}$. 
+	Количество $X_i$ и $Y_i$ одинаковое.       
+      \item Предполагаем: внутри пары $X_i$ и $Y_i$ зависимы, а наблюдения с разными номерами независимы. 
+	Рассматриваем разницу $D_i = X_i - Y_i$ и получаем одномерную выборку. 
+	Величины $D_i$ независимы и одинаково распределены.
+	Возможно три описанных ранее случая :) 
+	Здесь для примера рассмотрим случай, когда $D_i \sim \cN(\mu_d, \sigma^2_d)$ с неизвестной дисперсией.
+	
+      \item Проверяемая гипотеза: $H_0$: $\mu_d = \mu_0$ против $H_a$: $\mu_d \neq \mu_0$;
+
+     \item Статистика: 
+	\[
+	  t = \frac{\bar D - \mu_d}{se(\bar D)} = 
+	  \frac{\bar X - \bar Y - \mu_d}{\sqrt{\frac{\hat \sigma^2_d}{n}}},
+      \]
+      где 
+      \[
+	\hat \sigma^2_d = \frac{\sum (D_i - \bar D)^2 }{n - 1} = \frac{\sum (X_i - Y_i - (\bar X - \bar Y))^2 }{n - 1}
+      \]
+
+    \item При верной $H_0$ оказывается, что $t \sim t_{n-1}$;
+\end{enumerate}
+
+
+  \item Гипотеза о равенстве дисперсий при нормальности распределения обеих выборок
+    \begin{enumerate}
+      \item Наблюдаем: $X_1$, $X_2$, \ldots, $X_{n_x}$, $Y_1$, $Y_2$, \ldots, $Y_{n_y}$. 
+	Возможно, что $n_x \neq n_y$. Дисперсии $\sigma^2_x$ и $\sigma^2_y$ не знаем. Возможно, что дисперсии не равны.
+      \item Предполагаем: $X_i$ одинаково распределены между собой $\cN(\mu_x, \sigma^2)$, 
+	$Y_i$ одинаково распределены между собой $\cN(\mu_y, \sigma^2)$.
+	Все величины независимы. Количества $n_x$ и $n_y$ любые.
+
+	
+      \item Проверяемая гипотеза: $H_0$: $\sigma_x = \sigma_y$ против $H_a$: $\sigma_x \neq \sigma_y$;
+
+     \item Статистика: 
+	\[
+	F = \frac{\hat \sigma^2_x}{\hat \sigma^2_y}     
+      \]
+     \item При верной $H_0$ оказывается, что $F \sim F_{n_x-1, n_y - 1}$;
+\end{enumerate}
 
 
 \end{enumerate}
