not a doctor started

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4245,8 +4245,26 @@ $(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$,
 \end{problem}
 
 
+\section{Я не врач!}
+
+\begin{problem}
+  Какие 10 лекарств являются лидерами по объёму продаж в денежном выражении в России за прошлый год? Сколько фаз клинических испытаний каждое из них прошло согласно \url{https://www.drugbank.ca}?
+  \begin{sol}
+  \end{sol}
+\end{problem}
 
 
+\begin{problem}
+  \todo[inline]{что-то про шансы}
+  \begin{sol}
+  \end{sol}
+\end{problem}
+
+\begin{problem}
+  \todo[inline]{здесь LR тест в качестве аналога MH теста для агрегирования отдельных таблиц сопряженности}
+  \begin{sol}
+  \end{sol}
+\end{problem}
 
 
 
